# ASR_project

./: .gitignore  ASR_CODEBASE_OVERVIEW.md  Project_16_conccept.odt  README.md  data.txt  listening.py  model.ipynb  phoneme_durations3.py  pyproject.toml  summary_with_102.txt
AutorskieDane/AutorkiGlos/: Kordian3.txt  Kordian4.txt  Ks1b.txt  Ks2a.txt  Ks2c.txt  Ks3b.txt  Potop1.txt  brutus.txt  id2.txt  id3.txt  inf2.txt  lalka1.txt  lalka3.txt  lalka5.txt  lalka6.txt
AutorskieDane/AutorskiDataset/: Kordian1.TextGrid  Kordian1.txt  Kordian2.TextGrid  Kordian3.TextGrid  Kordian4.TextGrid  Kordian6.TextGrid  Ks1.TextGrid  Ks1b.TextGrid  Ks1c.TextGrid  Ks2a.TextGrid  Ks2b.TextGrid  Ks2b.txt  Ks2c.TextGrid  Ks3b.TextGrid  Ks3c.TextGrid  Ks3c.txt  Potop1.TextGrid  Potop2a.TextGrid  Potop3.TextGrid  Tango1.TextGrid  brutus.TextGrid  id1.TextGrid  id2.TextGrid  id3.TextGrid  inf1.TextGrid  inf1.txt  inf2.TextGrid  inf3.TextGrid  inf3.txt  lalka1.TextGrid  lalka2.TextGrid  lalka3.TextGrid  lalka4.TextGrid  lalka4.txt  lalka5.TextGrid  lalka6.TextGrid  testowy0.TextGrid
AutorskieDane/AutorskiGlos/: Kordian2.TextGrid  (+17 more)
PythonFiles/: NeuralModel.py  constants.py  evaluator.py  parsers.py  trainers.py
asr/: listening.py
data/: summary_with_102.txt
notebooks/: 4epoki_maly_model.pt  FineTuning.ipynb  NeuralNetwork.ipynb  Results.ipynb  Training.ipynb  TrainingAugment.ipynb  TrainingSoft.ipynb  crnn.ipynb  model.ipynb
scripts/: check_pipeline.py
src/: NeuralModel.py  augment.py  constants.py  evaluator.py  gridcorrection.py  parsers.py  phoneme_durations.py  trainers.py
(+71 files in other folders)
