[project]
name = "asr"
version = "0.1.0"
description = "Automatic speech recognition for Polish spoken words"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "optuna>=4.8.0",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchmetrics>=1.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.11",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "src"
